# aoc

./: .gitignore  .pre-commit-config.yaml  README.md  advent  justfile  pyproject.toml  requirements.txt  start
.github/: dependabot.yml
2023/: day00.py  day01.py  day02.py  day03.py  day06.py  day08.py  day09.py  q03.py  q05.py
aoc2023/: q04.py  q07.py
aoc_i13e/: __init__.py  support.py
aoc_i13e/aoc2022/: q01.py  q02.py  q03.py  q04.py
aoc_i13e/aoc2023/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q11.py
aoc_i13e/aoc2024/: q00.py  q01.py  q02.py  q03.py  q04.py  q07.py  q08.py  q09.py  q10.py  q11.py
misc/: date_utils.py  example_solution.py.tmpl
solutions/: README.md  base.py
solutions/2022/day_01/: README.md  solution.py
solutions/2022/day_02/: solution.py
solutions/2022/day_03/: solution.py
solutions/2022/day_04/: solution.py
solutions/2022/day_05/: solution.py
solutions/2022/day_06/: solution.py
solutions/2022/day_07/: solution.py
solutions/2022/day_08/: solution.py
solutions/2022/day_09/: solution.py
solutions/2022/day_10/: README.md  solution.py
solutions/2023/day_01/: solution.py
solutions/2023/day_02/: solution.py
solutions/2023/day_04/: solution.py
solutions/2023/day_05/: solution.py
solutions/2023/day_06/: solution.py
