[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc-i13e"
dynamic = ["version", "dependencies"]
description = "Ian's solutions for https://adventofcode.com/"
requires-python = ">= 3.10"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[[project.authors]]
name = "Ian Breckenridge"

[project.license]
text = "GPL-3.0-or-later"

[project.urls]
Repository = "https://github.com/i13e/aoc"

# [project.scripts]
# aocw = "aoc_wim.cli:run_one"
# s = "aoc_wim.cli:speedhack"
# _set_docstrings = "aoc_wim.util:set_docstrings"
# aoc-init = "aoc_wim.util:start"

[project.entry-points."adventofcode.user"]
i13e = "aoc_i13e:mysolve"

[tool.setuptools.dynamic]
version = {attr = "aoc_i13e.__version__"}
dependencies = {file = ["requirements.txt"]}
